--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -4,10 +4,10 @@ repos:
       hooks:
           - id: black
     - repo: https://github.com/astral-sh/ruff-pre-commit
-      rev: v0.3.7
+      rev: v0.8.0
       hooks:
           - id: ruff
-            args: [check, --fix, --unsafe-fixes, --exit-non-zero-on-fix]
+            args: [--fix, --unsafe-fixes, --exit-non-zero-on-fix]
     - repo: https://github.com/pre-commit/pre-commit-hooks
       rev: v4.4.0
       hooks:
